--- a/.gitmodules
+++ b/.gitmodules
@@ -10,3 +10,9 @@
 [submodule "new/px4-offboard_ws/src/px4_msgs"]
 	path = new/px4-offboard_ws/src/px4_msgs
 	url = https://github.com/PX4/px4_msgs.git
+[submodule "new/Micro-XRCE-DDS-Agent"]
+	path = new/Micro-XRCE-DDS-Agent
+	url = https://github.com/eProsima/Micro-XRCE-DDS-Agent.git
+[submodule "new/Micro-XRCE-DDS-Client"]
+	path = new/Micro-XRCE-DDS-Client
+	url = https://github.com/eProsima/Micro-XRCE-DDS-Client.git
