Added acados as submodule

--- a/.gitmodules
+++ b/.gitmodules
@@ -16,3 +16,6 @@
 [submodule "new/Micro-XRCE-DDS-Client"]
 	path = new/Micro-XRCE-DDS-Client
 	url = https://github.com/eProsima/Micro-XRCE-DDS-Client.git
+[submodule "new/acados"]
+	path = new/acados
+	url = https://github.com/acados/acados.git
